Hola prueba subir archivo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <fieldset>
             <legend>Información del Personaje</legend>
 
+            <h1>Hola mundo</h1>
             
             <div class="cabezera">
 
